2008-12-31       Gaius Mulley <gaius@gnu.org>

	* gm2/gm2-libs-ch/dtoa.c:  new file.
	* gm2/gm2-libs-ch/ldtoa.c:  new file.
	* gm2/gm2-libs/dtoa.def:  new file.
	* gm2/gm2-libs/ldtoa.def:  new file.
	* gm2/gm2-libs/StringConvert.mod:  removed call to free.
	* gm2/gm2-libs-iso/RealConv.mod:  reimplemented
	  conversion routines using dtoa rather than
	  StringConvert.
	* gm2/gm2-compiler/M2Quads.mod:  fixed bug reported by
	  John O Goyo <jgoyo@ca.inter.net> set expressions using
	  / did not reduce to xor.  Confusion between DivTok (DIV)
	  and DivideTok (/) tokens.
	* testsuite/gm2/pim/run/pass/bitsettest.def:  new file.
	* testsuite/gm2/pim/run/pass/bitsettest.mod:  new file to
	  test this bugfix never regresses.
	* gm2/Make-file.in:  added dtoa.def and ldtoa.def to the
	  list of definition modules in GM2-LIBS-BOOT-DEFS and
	  GM2-LIBS-DEFS.

2008-12-30       Gaius Mulley <gaius@gnu.org>

	* gm2/Make-lang.in:  modified SO, SO_O2 to contain -fPIC.
	  Added dtoa.c and ldtoa.c.
	* gm2/gm2-libs/StringConvert.mod:  corrected dates.
	* gm2/gm2-libs/errno.def:  added ERANGE.
	* gm2/gm2-libs-iso/README.texi:  added RealConv to list
	  of completed modules.
	* gm2/init/gm2-gccinit:  added dtoa and ldtoa.
	* gm2/init/gm2lccinit:  added dtoa and ldtoa.
	* gm2/init/gm2lgeninit:  added dtoa and ldtoa.
	* gm2/init/gm2linit:  added dtoa and ldtoa.
	* gm2/init/gm2lorderinit:  added dtoa and ldtoa.
	* gm2/init/gm2minit:  added dtoa and ldtoa.
	* gm2/init/h2definit:  added dtoa and ldtoa.
	* gm2/gm2-libs/StringConvert.mod:  replaced
	  implementation of LongrealToString with a call
	  to ldtoa.  Replaced implementation with a call
	  to strtold.
	* all regression tests pass on LP64.
	
2008-12-19       Gaius Mulley <gaius@gnu.org>

	* gm2/gm2-libs/StringConvert.mod:  used powl instead
	  of exp10l due to portability issues.
	
2008-12-18       Gaius Mulley <gaius@gnu.org>

	* gm2/gm2/Make-lang.in:  RealConv.mod new file.
	* gm2/gm2/gm2builtins.c:  added __builtin_log10f,